拼好饭：菜单完成，游戏主体done.可以拓展剧情，加入新的酒配方，新的人物、音乐

--- a/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj.filters
+++ b/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj.filters
@@ -54,7 +54,7 @@
     <ClCompile Include="scene.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="bartend_tool.cpp">
+    <ClCompile Include="bartend_bottle.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="button.cpp">
@@ -122,7 +122,7 @@
     <ClInclude Include="concrete_scene.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="bartend_tool.h">
+    <ClInclude Include="bartend_bottle.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="button.h">
