--- a/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj
+++ b/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj
@@ -142,7 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bartend_meun.cpp" />
-    <ClCompile Include="bartend_tool.cpp" />
+    <ClCompile Include="bartend_bottle.cpp" />
     <ClCompile Include="bartend_material.cpp" />
     <ClCompile Include="bartend_system.cpp" />
     <ClCompile Include="buondle.cpp" />
@@ -162,7 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bartend_meun.h" />
-    <ClInclude Include="bartend_tool.h" />
+    <ClInclude Include="bartend_bottle.h" />
     <ClInclude Include="bartend_material.h" />
     <ClInclude Include="bartend_system.h" />
     <ClInclude Include="bundle.h" />
