太空战机: 主体完成,细节完善中

--- a/SDL_Shooter/CMakeLists.txt
+++ b/SDL_Shooter/CMakeLists.txt
@@ -36,6 +36,8 @@ add_executable(${MyExecutable} src/main.cpp
                                 src/resourcesMgr.cpp
                                 src/scene.cpp
                                 src/sceneMain.cpp
+                                src/sceneBegin.cpp
+                                src/sceneEnd.cpp
                                 )
 
 # 链接库
