太空战机: 玩家实现重构,加入装饰者模式(临时Buff)

--- a/SDL_Shooter/CMakeLists.txt
+++ b/SDL_Shooter/CMakeLists.txt
@@ -38,6 +38,7 @@ add_executable(${MyExecutable} src/main.cpp
                                 src/sceneMain.cpp
                                 src/sceneBegin.cpp
                                 src/sceneEnd.cpp
+                                src/player.cpp
                                 )
 
 # 链接库
