幽灵逃生: 尝试修复空间四叉树Bug,before:不用智能指针

--- a/GhostEscape/CMakeLists.txt
+++ b/GhostEscape/CMakeLists.txt
@@ -49,6 +49,8 @@ add_executable(${MyExecutable}
                     src/affiliate/sprite_anim.cpp
                     src/affiliate/sprite.cpp
                     src/affiliate/collide_box.cpp
+                    src/affiliate/collide_manager.cpp
+                    src/affiliate/quad_tree.cpp
                     src/core/actor.cpp
                     src/core/assets_store.cpp
                     src/core/game.cpp
